Fix T75330: Select linked crashes without a bone near the cursor

Own error with recent improvements to select link.